--- a/front/src/components/payment/PaymentForm.css
+++ b/front/src/components/payment/PaymentForm.css
@@ -159,7 +159,7 @@
   padding: 24px;
   height: 325px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-  border: 1px solid #C5D8E5;
+  border: 1px solid #161f24;
   transition: all 0.3s;
 }
 
