--- a/front/src/Styles/layout.css
+++ b/front/src/Styles/layout.css
@@ -81,6 +81,7 @@
     .search-container {
       flex-direction: column;
       align-items: stretch;
+      overflow: visible !important;
     }
     
     .search-actions {
@@ -91,5 +92,7 @@
     .dropdown-menu {
       right: auto;
       left: 0;
+      position: relative;
+      overflow: visible !important;
     }
   }    
