--- a/front/src/Styles/Freelancer/badge.css
+++ b/front/src/Styles/Freelancer/badge.css
@@ -23,3 +23,21 @@
   background-color: #ede9fe;
   color: #6b21a8;
 }
+.badge-container.dark-mode {
+  background-color: #374151;
+}
+
+.dark-mode .badge-beginner {
+  background-color: #064e3b;
+  color: #a7f3d0;
+}
+
+.dark-mode .badge-advanced {
+  background-color: #1e3a8a;
+  color: #bfdbfe;
+}
+
+.dark-mode .badge-certified {
+  background-color: #581c87;
+  color: #ddd6fe;
+}
